--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,6 +13,9 @@
             <directory>./tests</directory>
         </testsuite>
     </testsuites>
+    <logging>
+        <log type="coverage-clover" target="coverage.xml" />
+    </logging>
     <filter>
         <whitelist>
             <directory suffix=".php">./src</directory>
