--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.4",
+        "php-coveralls/php-coveralls": "^2.5",
         "phpstan/phpstan": "^1.8",
         "phpunit/phpunit": "^8.5.23"
     },
@@ -40,7 +41,8 @@
     "scripts": {
         "fix-style": "vendor/bin/php-cs-fixer fix --using-cache=no --config=.php-cs-fixer.dist.php --ansi",
         "phpstan": "vendor/bin/phpstan analyse --memory-limit=-1",
-        "test": "vendor/bin/phpunit --testdox"
+        "test": "vendor/bin/phpunit --testdox",
+        "coverall": "vendor/bin/php-coveralls"
     },
     "config": {
         "preferred-install": "dist",
