--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,27 +7,23 @@ on:
     branches: ["0.x"]
 
 jobs:
-  test:
+  phpunit:
     strategy:
-      fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        php: [7.2, 7.3, 7.4]
+        php_version: [7.2, 7.3, 7.4, 8.0, 8.1, 8.2]
         dependency-version: [prefer-lowest, prefer-stable]
-
     runs-on: ${{ matrix.os }}
-
     name: P${{ matrix.php }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
-
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Validate composer.json
-        run: composer validate --strict
-
+        uses: actions/checkout@v2
+      - name: Set up PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php_version }}
+          coverage: xdebug
       - name: Install dependencies
-        run: composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
-
-      - name: Run PHPUnit
+        run: composer install --${{ matrix.dependency-version }} --prefer-dist --no-interaction
+      - name: Run PHPUnit tests
         run: ./vendor/bin/phpunit
