--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,17 +11,17 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        php_version: [7.2, 7.3, 7.4, 8.0, 8.1, 8.2]
+        php-version: [7.2, 7.3, 7.4, 8.0, 8.1, 8.2]
         dependency-version: [prefer-lowest, prefer-stable]
     runs-on: ${{ matrix.os }}
-    name: P${{ matrix.php }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
+    name: P${{ matrix.php-version }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ matrix.php_version }}
+          php-version: ${{ matrix.php-version }}
           coverage: xdebug
       - name: Install dependencies
         run: composer install --${{ matrix.dependency-version }} --prefer-dist --no-interaction
