--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,18 +10,23 @@ jobs:
   phpunit:
     strategy:
       matrix:
-        php-version: [7.2, 7.3, 7.4, 8.0, 8.1, 8.2]
+        php_version: [7.2, 7.3, 7.4, 8.0, 8.1, 8.2]
     runs-on: ubuntu-latest
-    name: PHP ${{ matrix.php-version }}
+    name: PHP ${{ matrix.php_version }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ matrix.php-version }}
+          php-version: ${{ matrix.php_version }}
           coverage: xdebug
       - name: Install dependencies
-        run: composer install --prefer-dist --no-interaction
+        run: composer install --no-interaction --no-progress
       - name: Run PHPUnit tests
-        run: ./vendor/bin/phpunit
+        run: ./vendor/bin/phpunit --coverage-clover coverage.xml
+      - name: Submit coverage report to Coveralls
+        if: ${{ matrix.php_version == 7.2 }}
+        env:
+          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+        run: ./vendor/bin/php-coveralls --coverage_clover=coverage.xml -v
