--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,4 +29,4 @@ jobs:
         if: ${{ matrix.php_version == 7.2 }}
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
-        run: ./vendor/bin/php-coveralls --coverage_clover=coverage.xml -v
+        run: ./vendor/bin/php-coveralls --coverage_clover=coverage.xml --json_path=coverage.json
